--- a/FreeCodeCamp/FirstChallenge/style.css
+++ b/FreeCodeCamp/FirstChallenge/style.css
@@ -1,27 +1,78 @@
 body {
   box-sizing: border-box;
-  font-family: "Poppins, sans-serif";
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+  color: #ffffff;
+  line-height: 1.4;
+  padding: 1.5rem;
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  background-color: #1b1b32;
+  background-image: linear-gradient(
+      115deg,
+      rgba(58, 58, 158, 0.8),
+      rgba(136, 136, 206, 0.7)
+    ),
+    url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .container {
+  max-width: 720px;
   margin: auto;
+  padding: 0 0.62rem;
 }
 
 .header {
+  width: 100%;
   text-align: center;
-  padding: 3vh;
+  font-size: 1.25rem;
+  margin-bottom: 1.875rem;
 }
 
-.form {
-  background-color: rgb(36, 36, 68, 0.9);
-  padding: 20px;
-  width: 50%;
+.title {
+  line-height: 1.2;
+  font-weight: 500;
+}
+
+.description {
+  font-style: italic;
+  font-weight: 100;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+  letter-spacing: 0.125rem;
+}
+
+.survey-form {
+  background-color: rgba(27, 27, 50, 0.8);
+  border-radius: 0.25rem;
+  padding: 3rem;
 }
 
 .input-name {
   color: #ffffff;
+  font-size: 1.325rem;
 }
 
 textarea {
   resize: vertical;
+}
+
+p {
+  font-size: 1rem;
+}
+
+p,
+h1 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
 }
